// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-uswds-side-navigation should render the component with custom navigation label 1`] = `
<c-uswds-side-navigation>
  #shadow-root(open)
    <div
      class="margin-bottom-4 tablet:margin-bottom-0"
    >
      <nav
        aria-label="Custom Navigation"
      >
        <ul
          class="usa-sidenav"
        />
      </nav>
    </div>
</c-uswds-side-navigation>
`;

exports[`c-uswds-side-navigation should render the component with default values 1`] = `
<c-uswds-side-navigation>
  #shadow-root(open)
    <div
      class="margin-bottom-4 tablet:margin-bottom-0"
    >
      <nav
        aria-label="Side Navigation"
      >
        <ul
          class="usa-sidenav"
        />
      </nav>
    </div>
</c-uswds-side-navigation>
`;

exports[`c-uswds-side-navigation should render the component with navigation items 1`] = `
<c-uswds-side-navigation>
  #shadow-root(open)
    <div
      class="margin-bottom-4 tablet:margin-bottom-0"
    >
      <nav
        aria-label="Side Navigation"
      >
        <ul
          class="usa-sidenav"
        />
      </nav>
    </div>
</c-uswds-side-navigation>
`;

exports[`c-uswds-side-navigation should render the component with sub menu items 1`] = `
<c-uswds-side-navigation>
  #shadow-root(open)
    <div
      class="margin-bottom-4 tablet:margin-bottom-0"
    >
      <nav
        aria-label="Side Navigation"
      >
        <ul
          class="usa-sidenav"
        />
      </nav>
    </div>
</c-uswds-side-navigation>
`;
